Exercícios resolvidos das aulas 7 e 8

--- a/aula07/Aula07_AED1.ipynb
+++ b/aula07/Aula07_AED1.ipynb
@@ -1597,7 +1597,9 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1612,26 +1614,6 @@
    ],
    "source": [
     "print ('Testando \\n Strings \\n em \\n Python')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print ('\\n')"
    ]
   },
   {
@@ -2426,10 +2408,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Digite seu ano de nascimento:  1998\n",
+      "Digite o ano atual:  2024\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sua idade em anos é: 26, em meses 312, em dias 9490, em semanas 1352!\n"
+     ]
+    }
+   ],
+   "source": [
+    "ano_nascimento = int(input(\"Digite seu ano de nascimento: \"))\n",
+    "ano_atual = int(input(\"Digite o ano atual: \"))\n",
+    "\n",
+    "quantidade_anos = (ano_atual - ano_nascimento)\n",
+    "quantidade_meses = quantidade_anos * 12\n",
+    "quantidade_dias = quantidade_anos * 365\n",
+    "quantidade_semanas = quantidade_anos * 52\n",
+    "print(f\"Sua idade em anos é: {quantidade_anos}, em meses {quantidade_meses}, em dias {quantidade_dias}, em semanas {quantidade_semanas}!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2440,10 +2447,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Digite o valor do seu salário:  14000\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Seu novo salário é 17500.0 !\n"
+     ]
+    }
+   ],
+   "source": [
+    "salario = float(input(\"Digite o valor do seu salário: \"))\n",
+    "novo_salario = salario + (salario * 0.25)\n",
+    "print(f'Seu novo salário é {novo_salario} !')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2532,7 +2558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
