--- a/aula08/Aula08-Condicionais.ipynb
+++ b/aula08/Aula08-Condicionais.ipynb
@@ -924,10 +924,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Digite o valor de a: 2\n",
+      "Digite o valor de b: -6\n",
+      "Digite o valor de c: 3\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A equação possui duas raízes reais: 2.37 e 0.63\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "a = float(input(\"Digite o valor de a:\") )\n",
+    "if a == 0:\n",
+    "    print(\"Não é uma equação do segundo grau\")\n",
+    "else: \n",
+    "    b = float(input(\"Digite o valor de b:\") )\n",
+    "    c = float(input(\"Digite o valor de c:\") )\n",
+    "\n",
+    "    delta = b**2 - 4*a*c \n",
+    "    \n",
+    "    if delta < 0:\n",
+    "        print(\"A equação não possui raízes reais.\")\n",
+    "    \n",
+    "    elif delta == 0:\n",
+    "        raiz = -b / (2*a)\n",
+    "        print(f\"A equação possui apenas uma raiz real: {raiz}\")\n",
+    "\n",
+    "    else: \n",
+    "        raiz1 = (-b + math.sqrt(delta)) / (2*a)\n",
+    "        raiz2 = (-b - math.sqrt(delta)) / (2*a)\n",
+    "        print(f\"A equação possui duas raízes reais: {round(raiz1, 2)} e {round(raiz2, 2)}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -953,7 +993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
