--- a/aula12/Aula12_ListasTuplasDicionarios.ipynb
+++ b/aula12/Aula12_ListasTuplasDicionarios.ipynb
@@ -3365,7 +3365,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Inicializar a matriz vazia\n",
+    "matriz = []\n",
+    "\n",
+    "print(\"Digite os elementos da matriz 4x4:\")\n",
+    "\n",
+    "# Ler os dados da matriz\n",
+    "for i in range(4):\n",
+    "    linha = []  # Inicializa uma nova linha vazia\n",
+    "    for j in range(4):\n",
+    "        # Lê cada elemento da matriz como um número real\n",
+    "        elemento = float(input(f\"Elemento [{i + 1}, {j + 1}]: \"))\n",
+    "        linha.append(elemento)  # Adiciona o elemento à linha\n",
+    "    matriz.append(linha)  # Adiciona a linha à matriz\n",
+    "\n",
+    "# Inicializar a variável para armazenar a soma da diagonal principal\n",
+    "soma_diagonal = 0\n",
+    "\n",
+    "# Calcular a soma dos elementos da diagonal principal\n",
+    "for i in range(4):\n",
+    "    # A diagonal principal é composta pelos elementos onde a linha e a coluna têm o mesmo índice\n",
+    "    soma_diagonal += matriz[i][i]\n",
+    "\n",
+    "# Exibir o resultado\n",
+    "print(f\"A soma dos elementos da diagonal principal é: {soma_diagonal:.2f}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3379,7 +3404,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Inicializar a matriz vazia\n",
+    "matriz = []\n",
+    "\n",
+    "print(\"Digite os elementos da matriz 5x5:\")\n",
+    "\n",
+    "# Ler os dados da matriz\n",
+    "for i in range(5):\n",
+    "    linha = []  # Inicializa uma nova linha vazia\n",
+    "    for j in range(5):\n",
+    "        # Lê cada elemento da matriz como um número real\n",
+    "        elemento = float(input(f\"Elemento [{i + 1}, {j + 1}]: \"))\n",
+    "        linha.append(elemento)  # Adiciona o elemento à linha\n",
+    "    matriz.append(linha)  # Adiciona a linha à matriz\n",
+    "\n",
+    "# Inicializar variáveis para armazenar a soma e a quantidade de elementos das linhas pares\n",
+    "soma_linhas_pares = 0\n",
+    "quantidade_elementos = 0\n",
+    "\n",
+    "# Calcular a soma dos elementos das linhas pares\n",
+    "# e contar quantos elementos existem nas linhas pares\n",
+    "for i in range(5):\n",
+    "    # Verifica se a linha é par\n",
+    "    if i % 2 == 0:\n",
+    "        for j in range(5):\n",
+    "            soma_linhas_pares += matriz[i][j]\n",
+    "            quantidade_elementos += 1\n",
+    "\n",
+    "# Calcular a média dos elementos das linhas pares\n",
+    "if quantidade_elementos > 0:\n",
+    "    media = soma_linhas_pares / quantidade_elementos\n",
+    "    print(f\"A média dos elementos nas linhas pares é: {media:.2f}\")\n",
+    "else:\n",
+    "    print(\"Não há linhas pares na matriz.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3400,14 +3459,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "lista = []\n",
+    "for i in range(5):\n",
+    "  n = int(input(f\"Digite o valor {i+1}: \"))\n",
+    "  lista.append(n)\n",
+    "\n",
+    "t = tuple(lista)\n",
+    "print(lista)\n",
+    "print(t)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3481,7 +3542,45 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Inicializar um dicionário vazio para armazenar os nomes e idades\n",
+    "idade_por_nome = {}\n",
+    "\n",
+    "print(\"Digite os nomes e idades de pelo menos 5 pessoas:\")\n",
+    "\n",
+    "# Ler os dados e armazenar no dicionário\n",
+    "# Neste exemplo, exigimos pelo menos 5 pares, mas o usuário pode adicionar mais\n",
+    "numero_de_pessoas = 5\n",
+    "for _ in range(numero_de_pessoas):\n",
+    "    # Ler o nome da pessoa\n",
+    "    nome = input(\"Digite o nome da pessoa: \")\n",
+    "    \n",
+    "    # Ler a idade da pessoa\n",
+    "    idade = int(input(f\"Digite a idade de {nome}: \"))\n",
+    "    \n",
+    "    # Armazenar no dicionário\n",
+    "    idade_por_nome[nome] = idade\n",
+    "\n",
+    "# Calcular a média das idades\n",
+    "soma_idades = 0\n",
+    "quantidade_pessoas = len(idade_por_nome)  # Quantidade de pares no dicionário\n",
+    "\n",
+    "# Percorrer o dicionário para calcular a soma das idades\n",
+    "for idade in idade_por_nome.values():\n",
+    "    soma_idades += idade\n",
+    "\n",
+    "# Calcular a média das idades\n",
+    "media_idade = soma_idades / quantidade_pessoas\n",
+    "\n",
+    "# Exibir todos os nomes que têm idade maior que a média\n",
+    "print(f\"A média das idades é: {media_idade:.2f}\")\n",
+    "print(\"Nomes com idade maior que a média:\")\n",
+    "\n",
+    "# Percorrer o dicionário para verificar quais nomes têm idade maior que a média\n",
+    "for nome, idade in idade_por_nome.items():\n",
+    "    if idade > media_idade:\n",
+    "        print(nome)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3495,7 +3594,42 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Inicializar as listas vazias\n",
+    "lista1 = []\n",
+    "lista2 = []\n",
+    "\n",
+    "print(\"Digite os elementos da primeira lista (5 elementos numéricos inteiros):\")\n",
+    "\n",
+    "# Ler os dados da primeira lista\n",
+    "for i in range(5):\n",
+    "    elemento = int(input(f\"Elemento {i + 1}: \"))\n",
+    "    lista1.append(elemento)\n",
+    "\n",
+    "print(\"\\nDigite os elementos da segunda lista (5 elementos numéricos inteiros):\")\n",
+    "\n",
+    "# Ler os dados da segunda lista\n",
+    "for i in range(5):\n",
+    "    elemento = int(input(f\"Elemento {i + 1}: \"))\n",
+    "    lista2.append(elemento)\n",
+    "\n",
+    "# Inicializar uma lista vazia para armazenar a união das listas\n",
+    "conjunto_uniao = []\n",
+    "\n",
+    "# Adicionar elementos da primeira lista à união\n",
+    "for elemento in lista1:\n",
+    "    if elemento not in conjunto_uniao:\n",
+    "        conjunto_uniao.append(elemento)\n",
+    "\n",
+    "# Adicionar elementos da segunda lista à união\n",
+    "for elemento in lista2:\n",
+    "    if elemento not in conjunto_uniao:\n",
+    "        conjunto_uniao.append(elemento)\n",
+    "\n",
+    "# Exibir o conjunto da união entre as duas listas\n",
+    "print(\"\\nConjunto da união entre as duas listas:\")\n",
+    "print(conjunto_uniao)"
+   ]
   },
   {
    "cell_type": "markdown",
