Atualização dos exercícios resolvidos

--- a/aula15/Aula15_exercicios_numpy.ipynb
+++ b/aula15/Aula15_exercicios_numpy.ipynb
@@ -121,15 +121,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([False,  True, False,  True, False,  True, False,  True, False,\n",
-      "        True])]\n"
+      "[1 3 5 7 9]\n"
      ]
     }
    ],
@@ -137,7 +136,7 @@
     "import numpy as np\n",
     "\n",
     "array2 = np.array([0,1,2,3,4,5,6,7,8,9])\n",
-    "numeros_impares = [array2 % 2 == 1]\n",
+    "numeros_impares = array2[array2 % 2 == 1]\n",
     "print(numeros_impares)"
    ]
   },
@@ -182,10 +181,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array original: [0 1 2 3 4 5 6 7 8 9]\n",
+      "Array com números ímpares substituídos: [ 0 -1  2 -1  4 -1  6 -1  8 -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "array2 = np.arange(10)\n",
+    "array_copy = np.copy(array2)\n",
+    "array_copy[array_copy % 2 == 1] = -1\n",
+    "\n",
+    "print(\"Array original:\", array2)\n",
+    "print(\"Array com números ímpares substituídos:\", array_copy)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,10 +213,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2],\n",
+       "       [3, 4, 5]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "array3 = np.arange(6)\n",
+    "print(array3)\n",
+    "array3.reshape(2, -1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -210,10 +252,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz 1:\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "Matriz 2:\n",
+      "[[ 7  8  9]\n",
+      " [10 11 12]]\n",
+      "Matrizes empilhadas verticalmente:\n",
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "matriz1 = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "matriz2 = np.array([[7, 8, 9], [10, 11, 12]])\n",
+    "matrizes_empilhadas = np.vstack((matriz1, matriz2))\n",
+    "\n",
+    "print(\"Matriz 1:\")\n",
+    "print(matriz1)\n",
+    "print(\"Matriz 2:\")\n",
+    "print(matriz2)\n",
+    "print(\"Matrizes empilhadas verticalmente:\")\n",
+    "print(matrizes_empilhadas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -224,10 +297,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matrizes empilhadas verticalmente:\n",
+      "[[ 1  2  3  7  8  9]\n",
+      " [ 4  5  6 10 11 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "matriz1 = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "matriz2 = np.array([[7, 8, 9], [10, 11, 12]])\n",
+    "matrizes_empilhadas = np.hstack((matriz1, matriz2))\n",
+    "print(\"Matrizes empilhadas verticalmente:\")\n",
+    "print(matrizes_empilhadas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,10 +336,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 1, 1, 2, 2, 2, 3, 3, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.r_[np.repeat(a, 3), np.tile(a, 3)]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -268,9 +371,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 9  9  4  8  8  1  5  3  6  3]\n",
+      " [ 3  3  2  1  9  5  1 10  7  3]\n",
+      " [ 5  2  6  4  5  5  4  8  2  2]\n",
+      " [ 8  8  1  3 10 10  4  3  6  9]\n",
+      " [ 2  1  8  7  3  1  9  3  6  2]\n",
+      " [ 9  2  6  5  3  9  4  6  1 10]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "np.random.seed(100)\n",
@@ -280,11 +396,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{1: 1, 3: 2, 4: 1, 5: 1, 6: 1, 8: 2, 9: 2}\n",
+      " {1: 2, 2: 1, 3: 3, 5: 1, 7: 1, 9: 1, 10: 1}\n",
+      " {2: 3, 4: 2, 5: 3, 6: 1, 8: 1}\n",
+      " {1: 1, 3: 2, 4: 1, 6: 1, 8: 2, 9: 1, 10: 2}\n",
+      " {1: 2, 2: 2, 3: 2, 6: 1, 7: 1, 8: 1, 9: 1}\n",
+      " {1: 1, 2: 1, 3: 1, 4: 1, 5: 1, 6: 2, 9: 2, 10: 1}]\n"
+     ]
+    }
+   ],
    "source": [
-    "def counts_of_all_values_rowwise(arr2d):\n"
+    "import numpy as np\n",
+    "\n",
+    "def contar_valores_unicos_linha(linha):\n",
+    "    valores_unicos, contagens = np.unique(linha, return_counts=True)\n",
+    "    return dict(zip(valores_unicos, contagens))\n",
+    "\n",
+    "contagens_por_linha = np.apply_along_axis(contar_valores_unicos_linha, axis=1, arr=arr)\n",
+    "print(contagens_por_linha)"
    ]
   }
  ],
